--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ title_separator          : "-"
 name                     : &name "Andy Smithwick"
 description              : &description "I'm an undergraduate student researcher at UC San Diego using Natural Lanuage Processing for social good."
 url                      : https://academicpages.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
-baseurl                  : "/research" # the subpath of your site, e.g. "/blog"
+baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "WishingWell13/WishingWell13.github.io/AndyResearchSite"
 
 # Site Author - The following control what appear as part of the author content on the side bar.
