--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ title                    : "Andy Smithwick / Student Researcher"
 title_separator          : "-"
 name                     : &name "Andy Smithwick"
 description              : &description "I'm an undergraduate student researcher at UC San Diego using Natural Lanuage Processing for social good."
-url                      : https://academicpages.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url                      : https://WishingWell13.github.io/AndyResearchSite # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "WishingWell13/WishingWell13.github.io/AndyResearchSite"
 
