--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ author:
   avatar           : "profile.png"
   name             : "Andrew Smithwick"
   pronouns         : "He/him" # example: "she/her" 
-  bio              : "Short biography for the left-hand sidebar"
+  bio              : "Studnet Researcher at UC San Diego"
   location         : "La Jolla, CA"
   employer         : "University of California San Diego"
   uri              : # URL
