--- a/_config.yml
+++ b/_config.yml
@@ -58,7 +58,7 @@ author:
   keybase          : # Username
   instagram        : # Username
   lastfm           : # Username
-  linkedin         : # Username
+  linkedin         : "andy-smithwick" # Username
   mastodon         : # URL
   medium           : # URL
   pinterest        : # Username
